kompose_production_ver1/test.geneesplaats.nl/test-cert-manager-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-test
