kompose_production_ver1/test.geneesplaats.nl/hello-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-07-31T12:01:43Z"
  labels:
    app: hello-app
  name: hello-app
  namespace: default
  resourceVersion: "2865"
  selfLink: /api/v1/namespaces/default/services/hello-app
  uid: 47e66192-53a9-49b8-8a37-f670a57b853f
spec:
  clusterIP: 10.63.240.115
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
