kompose_production_ver1/test.geneesplaats.nl/hello-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - test.geneesplaats.nl
    secretName: test-geneesplaats-nl-tls
  rules:
  - host: test.geneesplaats.nl
    http:
      paths:
      - path: /helloworld
        backend:
          serviceName: hello-app
          servicePort: 8080
      - path: /app
        backend:
          serviceName: react
          servicePort: 8000
      - path: /
        backend:
          serviceName: react
          servicePort: 8000
